src/objects/AE_By_Partcipant_And_Arm__c.object
<CustomObject>
    <fields>
        <fullName>Arm__c</fullName>
        <label>Arm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribution__c</fullName>
        <label>Attribution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_Symptom__c</fullName>
        <label>Baseline Symptom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTC_AE__c</fullName>
        <label>CTC AE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Grade__c</fullName>
        <label>Event Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Onset_Date__c</fullName>
        <label>Event Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Complaint__c</fullName>
        <label>Patient Complaint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>AE By Partcipant And Arm</relationshipLabel>
        <relationshipName>AE_By_Partcipant_And_Arm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <label>Resolved</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Color__c</fullName>
        <label>Row Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAE__c</fullName>
        <label>SAE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectId__c</fullName>
        <label>SubjectId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <label>AE By Partcipant And Arm</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE By Partcipant And Arm</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>